FLUID-5469: Fixed alignment of labels
Fixed the alignment of the links & buttons labels in the separated panel.

--- a/src/framework/preferences/css/SeparatedPanelPrefsEditorFrame.css
+++ b/src/framework/preferences/css/SeparatedPanelPrefsEditorFrame.css
@@ -97,7 +97,7 @@ html {
 
 /* Emphasize links & buttons panel */
 .fl-prefsEditor-separatedPanel .fl-links-buttons-options label {
-    width: 22em;
+    width: 21em;
     display:inline-block;
 }
 
